fix: some more improvements to spacing

--- a/assets/scss/critical.scss
+++ b/assets/scss/critical.scss
@@ -222,10 +222,10 @@
   }
 
   .category {
-    margin-top: 5em;
+    //margin-top: 5em;
 
     &-label {
-      margin-bottom: 0.625em;
+      margin-bottom: 1em;
     }
 
     &-title {
@@ -355,7 +355,7 @@
   }
 
   .category {
-    margin-top: 7.5em;
+    //margin-top: 7.5em;
 
     &-label {
       width: 20%;
